// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Components Render Brand Renders Renders Brand 1`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.img
      alt="BrandName logo"
      src="/"
    />
    <styled.h2>
      BrandName
    </styled.h2>
  </styled.a>
</Link>
`;

exports[`Navbar Components Render Brand Renders Renders Brand 2`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.img
      alt="logo"
      src="/"
    />
  </styled.a>
</Link>
`;

exports[`Navbar Components Render Brand Renders Renders Brand 3`] = `
<Link
  href="#"
>
  <styled.a>
    <styled.h2>
      BrandName
    </styled.h2>
  </styled.a>
</Link>
`;

exports[`Navbar Components Render NavItem Renders Renders NavSlider 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.125rem;
  color: #f9f9f9;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0.5rem;
}

.c0 a {
  text-decoration: none;
  color: #f9f9f9;
}

<span
  className="c0"
/>
`;

exports[`Navbar Components Render NavItem Renders Renders NavSlider with theme 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.125rem;
  color: white;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0.5rem;
}

.c0 a {
  text-decoration: none;
  color: white;
}

<span
  className="c0"
/>
`;

exports[`Navbar Components Render NavSlider Renders Renders NavSlider 1`] = `
.c0 {
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:480px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    -webkit-order: 50;
    -ms-flex-order: 50;
    order: 50;
    background: #878a8c;
  }
}

<div
  className="c0"
/>
`;

exports[`Navbar Components Render NavSlider Renders Renders NavSlider with theme 1`] = `
.c0 {
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:480px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    -webkit-order: 50;
    -ms-flex-order: 50;
    order: 50;
    background: #878a8c;
  }
}

<div
  className="c0"
/>
`;

exports[`Navbar Components Render Navwrapper Renders Renders NavWrapper 1`] = `
.c0 {
  background: #a9adad;
  min-height: 50px;
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  color: #f9f9f9;
}

<header
  className="c0"
/>
`;

exports[`Navbar Components Render Navwrapper Renders Renders NavWrapper with theme 1`] = `
.c0 {
  background: dodgerblue;
  min-height: 50px;
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  color: white;
}

<header
  className="c0"
/>
`;
